// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> renders disabled accordion 1`] = `
.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-2 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #332E54;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

.emotion-9 {
  border: 1px solid #EDEDF0;
  width: 100%;
  opacity: 0.4;
  background-color: #EDEDF0;
  border-color: #C3C0CD;
}

.emotion-9:not(:last-child) {
  border-bottom: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: not-allowed;
}

.emotion-5:focus {
  outline: none;
  box-shadow: inset 0px 0px 0px 3px #332E54;
}

.emotion-10:last-of-type .emotion-5:focus {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  className="emotion-9 emotion-10"
  disabled={true}
>
  <div
    aria-disabled={true}
    aria-expanded={false}
    className="emotion-5 emotion-6"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={-1}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      <svg
        className="emotion-2"
        fill="#332E54"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.88 12.88L6 12l3.55-3.56L6 4.88 6.88 4l4.44 4.44-4.44 4.44z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    aria-disabled={true}
    aria-hidden={true}
    className="emotion-7 emotion-8"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders no border accordion 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-5:focus {
  outline: none;
  box-shadow: inset 0px 0px 0px 3px #332E54;
}

.emotion-10:last-of-type .emotion-5:focus {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-2 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #332E54;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

.emotion-9 {
  width: 100%;
}

.emotion-9:not(:last-child) {
  border-bottom: none;
}

<div
  className="emotion-9 emotion-10"
  disabled={false}
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="emotion-5 emotion-6"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      <svg
        className="emotion-2"
        fill="#332E54"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.88 12.88L6 12l3.55-3.56L6 4.88 6.88 4l4.44 4.44-4.44 4.44z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    aria-disabled={false}
    aria-hidden={true}
    className="emotion-7 emotion-8"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders regular accordion 1`] = `
.emotion-9 {
  border: 1px solid #EDEDF0;
  width: 100%;
}

.emotion-9:not(:last-child) {
  border-bottom: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.emotion-5:focus {
  outline: none;
  box-shadow: inset 0px 0px 0px 3px #332E54;
}

.emotion-10:last-of-type .emotion-5:focus {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-0 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem;
}

.emotion-2 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #332E54;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  max-height: 0px;
  overflow: hidden;
  -webkit-transition: max-height 350ms ease-in-out;
  transition: max-height 350ms ease-in-out;
}

<div
  className="emotion-9 emotion-10"
  disabled={false}
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="emotion-5 emotion-6"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="emotion-0 emotion-1"
    >
      <div>
        title
      </div>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      <svg
        className="emotion-2"
        fill="#332E54"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.88 12.88L6 12l3.55-3.56L6 4.88 6.88 4l4.44 4.44-4.44 4.44z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    aria-disabled={false}
    aria-hidden={true}
    className="emotion-7 emotion-8"
  >
    <div>
      <div>
        expansion
      </div>
    </div>
  </div>
</div>
`;
